Add handling for exceptions to CmwLightClient and DataSourcePublisher