@@ -8,12 +8,12 @@ import de.gsi.microservice.filter.TimingCtx;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
-import java.util.Map;
+import java.util.List;
 
 public class DataSourceExample {
     private final static Logger LOGGER = LoggerFactory.getLogger(DataSourceExample.class);
     private final static String DEV_NAME = "GSCD002";
+    private final static String DEV2_NAME = "GSCD001";
     private final static String PROP = "AcquisitionDAQ";
     private final static String SELECTOR = "FAIR.SELECTOR.ALL";
 
@@ -26,16 +26,19 @@ public class DataSourceExample {
         });
         eventStore.start();
         // create a data source publisher and add a subscription
-        final DataSourcePublisher dataSourcePublisher = new DataSourcePublisher(eventStore);
+        final DataSourcePublisher dataSourcePublisher = new DataSourcePublisher(null, eventStore);
         if (args.length == 0) {
             LOGGER.atError().log("no directory server supplied");
             return;
         }
         LOGGER.atInfo().addArgument(args[0]).log("directory server: {}");
         final DirectoryLightClient directoryLightClient = new DirectoryLightClient(args[0]);
-        final String address = directoryLightClient.getDeviceInfo(Collections.singletonList(DEV_NAME)).get(0).getAddress().replace("tcp://", "rda3://");
+        final List<DirectoryLightClient.Device> devInfo = directoryLightClient.getDeviceInfo(List.of(DEV_NAME, DEV2_NAME));
+        final String address = devInfo.get(0).getAddress().replace("tcp://", "rda3://");
+        final String address2 = devInfo.get(1).getAddress().replace("tcp://", "rda3://");
         // run the publisher's main loop
         new Thread(dataSourcePublisher).start();
         dataSourcePublisher.subscribe(address + '/' + DEV_NAME + '/' + PROP + "?ctx=" + SELECTOR + '&' + "acquisitionModeFilter=int:0" +'&' + "channelNameFilter=GS11MU2:Current_1@10Hz", CmwLightExample.AcquisitionDAQ.class);
+        dataSourcePublisher.subscribe(address2 + '/' + DEV2_NAME + '/' + PROP + "?ctx=FAIR.SELECTOR.ALL" + '&' + "acquisitionModeFilter=int:4&channelNameFilter=GS02P:SumY:Triggered@25MHz", CmwLightExample.AcquisitionDAQ.class);
     }
 }
